--- a/styles/style.css
+++ b/styles/style.css
@@ -3,13 +3,12 @@
   *,
   *::before,
   *::after {
-    margin: 0;
+    margin: 0; 
     padding: 0;
     box-sizing: border-box;
   }
 
   body {
-    margin:0;
     font-family: sans-serif;
     background-image:linear-gradient(45deg,#ccf,#ccf);
   }
@@ -36,23 +35,20 @@
     z-index: 1;
   }
 
-  section:nth-of-type(1) {
+  section:nth-of-type(1), section:nth-of-type(2) {
     transform-origin:left;
     background-position: center;
-    backface-visibility: hidden;
     background-size: cover;
     background-repeat: no-repeat;
     transition:1s;
     border-radius: 10px;
   }
 
+  section:nth-of-type(1) {
+    backface-visibility: hidden;
+  }
+
   section:nth-of-type(2) {
-    transform-origin:left;
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    transition:1s;
-    border-radius: 10px;
     background-color: #873338;
     width: 100%;
     height: 100%;
@@ -85,11 +81,10 @@
     max-width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
   }
 
   .section-info h1 {
-    padding-bottom: 10px;
+    padding-bottom: 17px;
   }
 
   ul {
@@ -104,4 +99,20 @@
 
   ul li h2 {
     font-size: 50%;
+  }
+
+  .last-text {
+    position: absolute;
+    bottom: 10px;
+  }
+  
+  input[type="checkbox"] {
+    background-color: red;
+    cursor: pointer;
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    z-index: 1;
+    top: 30px;
+    left: 30px;
   }
