--- a/styles/style.css
+++ b/styles/style.css
@@ -24,7 +24,7 @@
   article {
     width:16em;
     position: relative;
-    height:24em;
+    height:25em;
     background-color:white;
     transform-style:preserve-3d;
     border-radius: 10px;
@@ -56,6 +56,25 @@
     z-index: -1;
     position: absolute;
   }
+
+  section:nth-of-type(3) {
+    position: absolute;
+    top: 0;
+    z-index: -1;
+    padding: 1.5em;
+    font-size: 80%;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    max-width: 100%;
+    display: flex;
+    border-radius: 10px;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  /* section:nth-of-type(3) h1 {
+    padding-bottom: 17px;
+  } */
   
   article:hover section:nth-of-type(1), article:hover section:nth-of-type(2) {
     rotate:y -180deg;
@@ -68,23 +87,6 @@
   img{
     height: 100%;
     border-radius: 10px;
-  }
-
-  .section-info {
-    position: absolute;
-    top: 0;
-    z-index: -1;
-    padding: 1.5em;
-    font-size: 80%;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    max-width: 100%;
-    display: flex;
-    flex-direction: column;
-  }
-
-  .section-info h1 {
-    padding-bottom: 17px;
   }
 
   ul {
@@ -101,10 +103,10 @@
     font-size: 50%;
   }
 
-  .last-text {
+  /* .last-text {
     position: absolute;
     bottom: 10px;
-  }
+  } */
   
   input[type="checkbox"] {
     background-color: red;
