--- a/styles/style.css
+++ b/styles/style.css
@@ -77,6 +77,9 @@
 
   p {
     z-index: -1;
+    pointer-events: none;
+    color: black;
+    text-decoration: none;
   }
 
   img{
@@ -110,5 +113,4 @@
   }
 
   .geen-link {
-    pointer-events: none;
   }
