--- a/styles/style.css
+++ b/styles/style.css
@@ -91,10 +91,10 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
-  }
-
-  ul li {
-    list-style: none;
+  
+    li {
+      list-style: none;
+    }
   }
 
   ul li h2 {
@@ -102,7 +102,6 @@
   }
   
   input[type="checkbox"] {
-    background-color: red;
     cursor: pointer;
     width: 30px;
     height: 30px;
@@ -112,5 +111,7 @@
     left: 30px;
   }
 
-  .geen-link {
-  }
+body:has(:checked) {
+  background: #212121;
+}
+
