--- a/styles/style.css
+++ b/styles/style.css
@@ -44,7 +44,8 @@
   }
 
   section:nth-of-type(1) {
-    backface-visibility: hidden;
+    /* Laat zien of de achterkant zichtbaar is of niet */
+    backface-visibility: hidden; 
   }
 
   section:nth-of-type(2) {
